Began refactoring business layer